infra/k8s/posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  # Actual pod description
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: gagandeep39/blog-posts-service
          resources:
            limits:
              memory: '128Mi'
              cpu: '250m'
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
      name: posts-clusterip-port
      protocol: TCP
