infra/k8s/posts-serv.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - port: 4000 # Node service port
      name: posts-port
      protocol: TCP
      targetPort: 4000 # Port of pod we want to expose
