infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  # Actual pod description
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: gagandeep39/blog-query-service
          resources:
            limits:
              memory: '128Mi'
              cpu: '250m'
---
apiVersion: v1
kind: Service
metadata:
  name: query-serv
spec:
  selector:
    app: query
  ports:
    - port: 8000
      targetPort: 8000
      name: query-clusterip-port
      protocol: TCP
