infra/k8s/ingress-srv.yml
# Run below command before this
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.40.2/deploy/static/provider/cloud/deploy.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    # Make sure to redirect post.com to localhost at C:\Windows\System32\drivers\etc\hosts for testing
    # Post service can now be accessed frm localhost/posts
    - host: localhost
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-serv
              servicePort: 8000
            # Requirs annotation nginx.ingress.kubernetes.io/use-regex: 'true'
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comment-serv
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: client-serv
              servicePort: 3000
